--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-sass-teambit",
+  "name": "sass-teambit",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,7 +9,7 @@
     "watch-poll": "mix watch -- --watch-options-poll=1000",
     "hot": "mix watch --hot",
     "production": "mix --production"
-  },
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/10xMike/node-sass-teambit.git"
@@ -22,10 +22,6 @@
   },
   "homepage": "https://github.com/10xMike/node-sass-teambit#readme",
   "devDependencies": {
-    "laravel-mix": "^6.0.19",
-    "postcss": "^8.1.14",
-    "resolve-url-loader": "^3.1.2",
-    "sass": "^1.34.1",
-    "sass-loader": "^11.0.1"
+    "laravel-mix": "^6.0.19"
   }
 }
