--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "watch-poll": "mix watch -- --watch-options-poll=1000",
     "hot": "mix watch --hot",
     "production": "mix --production"
-},
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/10xMike/node-sass-teambit.git"
@@ -22,6 +22,9 @@
   },
   "homepage": "https://github.com/10xMike/node-sass-teambit#readme",
   "devDependencies": {
-    "laravel-mix": "^6.0.19"
+    "laravel-mix": "^6.0.19",
+    "resolve-url-loader": "^3.1.2",
+    "sass": "^1.34.1",
+    "sass-loader": "^11.0.1"
   }
 }
